# agile_flight

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yaml  launch_evaluation.bash  requirements.txt  setup_py.bash  setup_ros.bash
environment/: CMakeLists.txt  package.xml
environment/include/: environment.hpp
environment/include/environment/: environment.hpp
environment/launch/: env.launch  env_debug.launch
environment/parameters/: camera.yaml  simple_sim_pilot.yaml
environment/parameters/tracks/: SplitS.yaml  real_track.yaml  real_track_old.yaml
environment/src/: environment_node.cpp
envsim/: CMakeLists.txt  package.xml
envsim/generate_environment/: .gitignore  generate_multiple.bash  objects.yaml  obstacle_config.yaml  obstacle_generator.py
envsim/include/envsim/: visionsim.hpp
envsim/launch/: visionenv_sim.launch  visionenv_sim_debug.launch
envsim/parameters/: camera_config.yaml  simple_sim_pilot.yaml
envsim/parameters/quads/: blackbird.yaml  kingfisher.yaml
envsim/parameters/tracks/: AirSim.yaml  AlphaPilot.yaml  unit_test.yaml
envsim/resources/rviz/: envsim.rviz  racesim.rviz
envsim/src/: visionsim_node.cpp
envsim_msgs/: CMakeLists.txt  package.xml
envsim_msgs/msg/: Obstacle.msg  ObstacleArray.msg
envtest/envpy/: README.md  run_vision_demo.py  run_vision_ppo.py
envtest/python/: README.md  run_vision_demo.py  run_vision_ppo.py
envtest/ros/: evaluation_config.yaml  evaluation_node.py  rl_example.py  ros_test.py  run_competition.py  user_code.py  utils.py
envtest/ros/rl_policy/PPO_1/: config.yaml  events.out.tfevents.1646756449.song.202460.0  events.out.tfevents.1646840529.song.137722.0  events.out.tfevents.1647003998.song.10122.0
envtest/ros/rl_policy/PPO_1/Policy/: iter_00050.pth  iter_00100.pth  iter_00150.pth  iter_00200.pth  iter_00250.pth  iter_00300.pth  iter_00350.pth  iter_00400.pth  iter_00450.pth  iter_00500.pth  iter_00550.pth  iter_00600.pth  iter_00650.pth  iter_00700.pth  iter_00750.pth  iter_00800.pth
envtest/ros/rl_policy/PPO_1/RMS/: iter_00050.npz  iter_00100.npz  iter_00150.npz  iter_00200.npz  iter_00250.npz  iter_00300.npz  iter_00350.npz  iter_00400.npz  iter_00450.npz  iter_00500.npz  iter_00550.npz  iter_00600.npz  iter_00650.npz  iter_00700.npz  iter_00750.npz  iter_00800.npz
envtest/ros/rl_policy/PPO_1/TestTraj/: test_traj_00050.csv  test_traj_00100.csv  test_traj_00150.csv  test_traj_00200.csv  test_traj_00250.csv  test_traj_00300.csv  test_traj_00350.csv  test_traj_00400.csv  test_traj_00450.csv  test_traj_00500.csv  test_traj_00550.csv  test_traj_00600.csv  test_traj_00650.csv  test_traj_00700.csv  test_traj_00750.csv  test_traj_00800.csv
envtest/ros/rl_policy/PPO_10/: config.yaml  events.out.tfevents.1646920596.song.343199.0
envtest/ros/rl_policy/PPO_10/Policy/: iter_00050.pth  iter_00100.pth  iter_00150.pth  (+7 more)
envtest/ros/rl_policy/PPO_3/: events.out.tfevents.1646846973.song.203836.0
envtest/ros/rl_policy/PPO_35/: config.yaml  events.out.tfevents.1646990437.song.56693.0
envtest/ros/rl_policy/PPO_9/: events.out.tfevents.1646916576.song.335239.0
envtest/scripts/: lint.sh
(+125 files in other folders)
