<?xml version="1.0"?>
<package format="2">
  <name>envsim</name>
  <version>0.0.1</version>
  <description>ROS-Wrapper for AgiLib</description>

  <maintainer email="foehn@ifi.uzh.ch">foehnph</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>agilib</depend>
  <depend>agiros</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>


  <depend>cv_bridge</depend>
  <depend>flightlib</depend>
  <depend>image_transport</depend>


</package>