<?xml version="1.0"?>
<package format="2">
  <name>envsim_msgs</name>
  <version>0.0.0</version>
  <description>The envsim_msgs package</description>

  <maintainer email="ekaufmann@ifi.uzh.ch">Elia Kaufmann</maintainer>
  <license>MIT</license>

  <author>Elia Kaufmann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>

</package>
